[tool.poetry]
name = "all-in-one"
version = "1.7.3"
description = ""
authors = ["diegowh <contacto.diegowh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keyboard = "^0.13.5"
pyautogui = "^0.9.54"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
